# porta

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  MANIFEST.md
manifests/: tools.toml
src/: archive.rs  cli.rs  doctor.rs  dotfiles.rs  download.rs  main.rs  manifest.rs  paths.rs  shell_init.rs  state.rs
src/install/: binary.rs  mod.rs  script.rs  source.rs
tests/: dotfiles_cli.rs  home_cli.rs
