[package]
name = "porta"
version = "0.1.0"
edition = "2021"
description = "A portable, no-admin developer environment bootstrapper with built-in AI CLI support."
license = "MIT"
repository = "https://github.com/baileyrd/porta"
readme = "README.md"

[[bin]]
name = "porta"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
# rustls for pure-Rust TLS (no OpenSSL/system libssl dependency); platform-verifier
# validates against the OS's own certificate store on top of that, so porta
# also trusts whatever root CA a locked-down corporate machine already has
# installed (e.g. a TLS-inspecting proxy) without needing admin rights to add it.
ureq = { version = "3", default-features = false, features = ["rustls", "platform-verifier"] }
anyhow = "1"
sha2 = "0.11.0"
flate2 = "1.1.9"
tar = "0.4.46"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
